# nepal-census-2021-sdg4

./: main.py  pyproject.toml
app/: __init__.py  callbacks.py  engine.py  layout.py
data/: nepal-census-dataset.csv
