[project]
name = "nepal-census-sdg4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "branca>=0.8.2",
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-leaflet>=1.1.3",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.5",
    "numba>=0.64.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "requests>=2.33.0",
    "xlrd>=2.0.2",
]